feat(TRAILER_TYPE): fetch trailer types
